--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,3 +15,20 @@ jobs:
         uses: actions/checkout@v4
       - name: Build Project
         uses: threeal/cmake-action@v2.1.0
+jobs:
+  build-python:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+        py-version: ["3.11", "3.12", "3.13"]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: setup python
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
+      - name: Build Project
+        run: |
+          pip install .
