--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -22,6 +22,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.12
+          cache: pip
+          cache-dependency-path: pyproject.toml
       # https://docs.github.com/en/actions/guides/building-and-testing-python#caching-dependencies
       # ^-- How to set up caching for pip on Ubuntu
       - name: Install dependencies
