--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -22,16 +22,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.12
-          cache: pip
-          cache-dependency-path: pyproject.toml
       # https://docs.github.com/en/actions/guides/building-and-testing-python#caching-dependencies
       # ^-- How to set up caching for pip on Ubuntu
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install numpy
-          python -m pip install Sphinx sphinx-rtd-theme sphinxcontrib-napoleon numpydoc myst-parser
-          python -m pip install .
+          python -m pip install .[docs]
       - name: Debugging information
         run: |
           echo "github.ref:" ${{github.ref}}
