--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ docs = [
     "Sphinx",
     "sphinx-rtd-theme",
     "sphinxcontrib-napoleon",
-    "numpydoc myst-parser",
+    "numpydoc",
+    "myst-parser"
 ]
 
 [build-system]
