--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,19 @@
+[project]
+name = "pydtfe"
+version = "0.1.1"
+dependencies = [
+    "numpy"
+]
+
+[project.optional-dependencies]
+docs = [
+    "Sphinx",
+    "sphinx-rtd-theme",
+    "sphinxcontrib-napoleon",
+    "numpydoc",
+    "myst-parser"
+]
+
 [build-system]
 requires = [
     "setuptools>=42",
@@ -5,3 +21,4 @@ requires = [
     "cmake>=3.11",
 ]
 build-backend = "setuptools.build_meta"
+
