Minimal import test

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,3 +31,6 @@ jobs:
       - name: Build Project
         run: |
           pip install .
+      - name: Test import
+        run: |
+          python python -c "import pydtfe"
