--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,5 +33,5 @@ jobs:
           python -m pip install .
       - name: Test import
         run: |
-          cd /home/runner
-          python python -c "import pydtfe"
+          cd ~
+          python -c "import pydtfe"
