--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,4 +30,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Build Project
         run: |
-          pip install .
+          python -m pip install .
+      - name: Test import
+        run: |
+          cd ~
+          python -c "import pydtfe"
